# cuFHE

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  Untitled Diagram.xml  format.bash  todo.md
cufhe/: .gitignore  CMakeLists.txt  Makefile  pri_key.txt
cufhe/include/: bootstrap_cpu.h  bootstrap_gpu.cuh  cufhe.h  cufhe_core.h  cufhe_cpu.h  cufhe_gpu.cuh
cufhe/include/details/: allocator.h  allocator_cpu.h  allocator_gpu.cuh  assert.h  error_gpu.cuh  math.h  utils_gpu.cuh
cufhe/include/ntt_gpu/: ntt.cuh  ntt_1024_device.cuh  ntt_1024_twiddle.cuh  ntt_conv_kind.cuh  ntt_ffp.cuh  ntt_shifting.cuh  ntt_single_thread.cuh
cufhe/lib/: CMakeLists.txt  allocator_cpu.cc  allocator_gpu.cu  bootstrap_cpu.cc  bootstrap_gpu.cu  cufhe.cc  cufhe_cpu.cc  cufhe_gates_cpu.cc  cufhe_gates_gpu.cu  cufhe_gpu.cu  cufhe_io.cc
cufhe/lib/details/: allocator_gpu.cu
cufhe/lib/ntt_gpu/: ntt_1024_device.cu.bak  ntt_1024_twiddle.cu
cufhe/python/: pyfhe.cpp  pyfhe.cu  test_circuits_gpu.py  test_encrypt.py  test_eval.py  test_gates.py  test_general.py  test_gpu.py  test_keygen.py
cufhe/python/lib/: fhe_cpu.py  fhe_gpu.py  fhepy.cpp  fhepy.cu  fhepy.py
cufhe/python/test/: test_gpu.py
cufhe/test/: CMakeLists.txt  test_FFP.cu  test_api_cpu.cc  test_api_gpu.cu  test_api_gpu_multi.cu  test_gapi.cu  test_gate_gpu.cc  test_gate_gpu.cu  test_gate_gpu_multi.cc  test_ggate_gpu.cc  test_intensive.cc
include/: bootstrap_gpu.cuh  cufhe.h  cufhe_gpu.cuh  plain.h
include/details/: allocator_cpu.h  assert.h  math.h
include/ntt_gpu/: ntt_1024_twiddle.cuh  ntt_ffp.cuh  ntt_shifting.cuh
src/: CMakeLists.txt  bootstrap_cpu.cc  bootstrap_gpu.cu  cufhe.cc  cufhe_cpu.cc  cufhe_gates_gpu.cu  cufhe_gpu.cu  cufhe_io.cc
src/details/: allocator_cpu.cc  allocator_gpu.cu
test/: CMakeLists.txt  plain.h  test_FFP.cu  test_api_cpu.cc  test_api_gpu_multi.cu  test_cmux.cc  test_gate_gpu.cc  test_gate_gpu_multi.cc  test_intensive.cc  test_perf.cc  test_util.h
